--- a/app/src/main/res/layout/activity_fullscreen_wallpaper.xml
+++ b/app/src/main/res/layout/activity_fullscreen_wallpaper.xml
@@ -51,7 +51,6 @@
         android:id="@+id/palette"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -115,6 +114,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="10dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginRight="15dp"
             android:background="@drawable/fab_label_background"
             android:padding="5dp"
