--- a/app/src/main/res/menu/selection_multi.xml
+++ b/app/src/main/res/menu/selection_multi.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_delete"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@android:drawable/ic_menu_save"
         android:orderInCategory="1"
         android:title="Delete"
         app:showAsAction="ifRoom" />
