--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="centerCrop"
-        android:src="@drawable/image" />
+        android:scaleType="centerInside"
+        android:src="@drawable/drawerimg" />
 
     <ImageView
         android:id="@+id/WallpaperOfTheDay_logo"
