--- a/app/src/main/res/menu/activity_maindrawer_drawer.xml
+++ b/app/src/main/res/menu/activity_maindrawer_drawer.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_random"
             android:icon="@android:drawable/ic_menu_gallery"
             android:title="RandomWallpaper" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@android:drawable/ic_menu_camera"
-            android:title="Gallery"
-            android:visible="false" />
+            android:id="@+id/nav_setting"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="Setting" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@android:drawable/ic_menu_slideshow"
