--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,5 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/image"
-    tools:context="com.pemikir.desktopper.Activity.SplashActivity"></RelativeLayout>
+    android:background="@drawable/splashimg"
+    tools:context="com.pemikir.desktopper.Activity.SplashActivity">
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="30dp"
+        android:src="@drawable/spashlogo" />
+
+</RelativeLayout>
