--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splashimg"
+    android:background="@drawable/splashimg1"
     tools:context="com.pemikir.desktopper.Activity.SplashActivity">
 
     <ImageView
