--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         android:src="@drawable/drawerimg" />
 
     <ImageView
