--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="colorPrimary">@color/black_70</item>
-        <item name="colorPrimaryDark">@color/black_90</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
     <style name="MenuLabelsStyle">
@@ -31,7 +29,7 @@
         <item name="colorPrimary">@color/black_70</item>
         <item name="colorPrimaryDark">@color/black_90</item>
         <item name="colorAccent">@color/colorAccent</item>
-
+        <item name="android:windowActionBar">false</item>
         <!--<item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>-->
@@ -46,7 +44,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowActionBarOverlay">true</item>
+
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
