--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="windowNoTitle">true</item>
+
+    <style name="Theme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
     </style>
 
@@ -24,31 +24,28 @@
         <item name="fab_colorRipple">@color/black_70</item>
     </style>
 
-    <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">
+    <style name="Theme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-        <item name="colorPrimary">@color/black_70</item>
-        <item name="colorPrimaryDark">@color/black_90</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowActionBar">false</item>
-        <!--<item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>-->
+    <style name="Theme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="etv_common_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center_vertical</item>
+       <!-- <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/border_white_rounded</item>
+        <item name="android:textCursorDrawable">@drawable/curser</item>-->
+        <item name="android:cursorVisible">true</item>
+
+        <item name="android:drawablePadding">3dp</item>
+        <item name="android:textColorHint">@color/white_40</item>
+        <item name="android:textSelectHandle">@color/red</item>
+        <item name="android:textSize">20dp</item>
     </style>
 
-    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowActionBarOverlay">true</item>
-
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
