--- a/app/src/main/res/layout/row_card.xml
+++ b/app/src/main/res/layout/row_card.xml
@@ -25,16 +25,35 @@
             android:visibility="gone" />
 
         <RelativeLayout
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="0.5dp"
-            android:background="@color/cardview_shadow_start_color">
+            android:layout_height="200dp"
+            android:layout_margin="0.2dp">
 
             <ImageView
                 android:id="@+id/card_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop" />
+
+            <RelativeLayout
+                android:id="@+id/img_selection_relative"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0.2dp"
+                android:background="@color/black_50"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/selected_card_image"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_favorite_white_48dp" />
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:id="@+id/image_relative"
