--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,8 +11,8 @@
     <style name="Theme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorPrimary">@color/blue</item>
+        <item name="colorAccent">@android:color/holo_red_light</item>
+        <item name="android:colorPrimary">@android:color/black</item>
         <item name="android:colorPrimaryDark">@color/red</item>
     </style>
 </resources>
