--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <style name="Theme" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -36,9 +36,9 @@
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center_vertical</item>
-       <!-- <item name="android:textColor">@color/white</item>
-        <item name="android:background">@drawable/border_white_rounded</item>
-        <item name="android:textCursorDrawable">@drawable/curser</item>-->
+        <!-- <item name="android:textColor">@color/white</item>
+         <item name="android:background">@drawable/border_white_rounded</item>
+         <item name="android:textCursorDrawable">@drawable/curser</item>-->
         <item name="android:cursorVisible">true</item>
 
         <item name="android:drawablePadding">3dp</item>
