--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -19,7 +19,7 @@
             android:capitalize="words"
             android:defaultValue="@string/FolderName"
             android:inputType="textCapWords"
-            android:key="example_text"
+            android:key="FOLDER_NAME"
             android:maxLines="1"
             android:selectAllOnFocus="true"
             android:singleLine="true"
@@ -29,7 +29,7 @@
             android:defaultValue="-1"
             android:entries="@array/no_of_rows_entry"
             android:entryValues="@array/no_of_rows_entry"
-            android:key="example_list"
+            android:key="selected_row"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
             android:title="@string/Select_No_Of_Rows" />
