--- a/app/src/main/res/layout/activity_fullscreen_wallpaper.xml
+++ b/app/src/main/res/layout/activity_fullscreen_wallpaper.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_40"
     tools:context="com.pemikir.desktopper.Activity.FullscreenWallpaper">
 
     <include
